@@ -1,9 +1,11 @@
 class InlineFormulaeAst
   
   attr_accessor :references, :current_sheet_name, :inline_ast
+  attr_accessor :replacements_made_in_the_last_pass
   
   def initialize(references, current_sheet_name, inline_ast = nil)
     @references, @current_sheet_name, @inline_ast = references, [current_sheet_name], inline_ast
+    @replacements_made_in_the_last_pass = 0
     @inline_ast ||= lambda { |sheet,reference,references| true }
   end
   
@@ -29,6 +31,7 @@ class InlineFormulaeAst
   def sheet_reference(sheet,reference)
     return [:error, '#REF!'] unless references[sheet]
     if inline_ast.call(sheet,reference.last.upcase.gsub('$',''),references)
+      @replacements_made_in_the_last_pass += 1
       ast = references[sheet][reference.last.upcase.gsub('$','')]
       if ast
         current_sheet_name.push(sheet)
@@ -46,6 +49,7 @@ class InlineFormulaeAst
   # TODO: Optimize by replacing contents of references hash with the inlined version
   def cell(reference)
     if inline_ast.call(current_sheet_name.last,reference.upcase.gsub('$',''),references)
+      @replacements_made_in_the_last_pass += 1
       ast = references[current_sheet_name.last][reference.upcase.gsub('$','')]
       if ast
         map(ast)
@@ -71,6 +75,8 @@ class InlineFormulae
   def self.replace(*args)
     self.new.replace(*args)
   end
+
+  attr_accessor :replacements_made_in_the_last_pass
   
   def replace(input,output)
     rewriter = InlineFormulaeAst.new(references, default_sheet_name, inline_ast)
@@ -83,5 +89,6 @@ class InlineFormulae
         output.puts line
       end
     end
+    @replacements_made_in_the_last_pass = rewriter.replacements_made_in_the_last_pass
   end
 end
