@@ -1,5 +1,11 @@
 class ReplaceColumnWithColumnNumberAST
     
+  attr_accessor :replacements_made_in_the_last_pass
+
+  def initialize
+    @replacements_made_in_the_last_pass = 0
+  end
+   
   def map(ast)
     return ast unless ast.is_a?(Array)
     operator = ast[0]
@@ -18,6 +24,7 @@ class ReplaceColumnWithColumnNumberAST
         reference = Reference.for(args[0][2][1])
       end
       reference.calculate_excel_variables
+      @replacements_made_in_the_last_pass += 1
       [:number, reference.excel_column_number.to_s]
     else
       [:function,name,*args.map { |a| map(a) }]
@@ -32,6 +39,8 @@ class ReplaceColumnWithColumnNumber
   def self.replace(*args)
     self.new.replace(*args)
   end
+
+  attr_accessor :replacements_made_in_the_last_pass
   
   def replace(input,output)
     rewriter = ReplaceColumnWithColumnNumberAST.new
@@ -44,5 +53,6 @@ class ReplaceColumnWithColumnNumber
         output.puts line
       end
     end
+    @replacements_made_in_the_last_pass = rewriter.replacements_made_in_the_last_pass
   end
 end
