@@ -1,7 +1,13 @@
 require_relative '../excel/formula_peg'
 
 class ReplaceIndirectsWithReferencesAst
-    
+  
+  attr_accessor :replacements_made_in_the_last_pass
+
+  def initialize
+    @replacements_made_in_the_last_pass = 0
+  end
+   
   def map(ast)
     return ast unless ast.is_a?(Array)
     operator = ast[0]
@@ -14,8 +20,10 @@ class ReplaceIndirectsWithReferencesAst
   
   def function(name,*args)
     if name == "INDIRECT" && args.size == 1 && args[0][0] == :string
+      @replacements_made_in_the_last_pass += 1
       Formula.parse(args[0][1]).to_ast[1]
     elsif name == "INDIRECT" && args.size == 1 && args[0][0] == :error
+      @replacements_made_in_the_last_pass += 1
       args[0]
     else
       puts "indirect #{[:function,name,*args.map { |a| map(a) }].inspect} not replaced" if name == "INDIRECT"
@@ -30,6 +38,8 @@ class ReplaceIndirectsWithReferences
   def self.replace(*args)
     self.new.replace(*args)
   end
+
+  attr_accessor :replacements_made_in_the_last_pass
   
   def replace(input,output)
     rewriter = ReplaceIndirectsWithReferencesAst.new
@@ -42,5 +52,6 @@ class ReplaceIndirectsWithReferences
         output.puts line
       end
     end
+    @replacements_made_in_the_last_pass = rewriter.replacements_made_in_the_last_pass
   end
 end
